refactor(avatar): no owner of the avatar
