# src/groups/groups.controller.ts
@@ -33,7 +33,11 @@ import { GetGroupQuestionsRespondDto } from './DTO/get-questions.dto';
 import { GroupRespondDto } from './DTO/group.dto';
 import { JoinGroupDto, JoinGroupRespondDto } from './DTO/join-group.dto';
 import { QuitGroupRespondDto } from './DTO/quit-group.dto';
-import { UpdateGroupDto, UpdateGroupRespondDto } from './DTO/update-group.dto';
+import {
+  UpdateGroupAvatarDto,
+  UpdateGroupDto,
+  UpdateGroupRespondDto,
+} from './DTO/update-group.dto';
 import { GroupQueryType, GroupsService } from './groups.service';
 
 @Controller('/groups')
@@ -55,6 +59,7 @@ export class GroupsController {
       req.name,
       userId,
       req.intro,
+      req.avatar,
     );
     return {
       code: 201,
@@ -118,16 +123,24 @@ export class GroupsController {
     @Body() req: UpdateGroupDto,
   ): Promise<UpdateGroupRespondDto> {
     const userId = this.authService.verify(auth).userId;
-    await this.groupsService.updateGroup(
-      userId,
-      id,
-      req.name,
-      req.intro,
-      req.avatar,
-    );
+    await this.groupsService.updateGroup(userId, id, req.name, req.intro);
     return {
       code: 200,
       message: 'Group updated successfully.',
+    };
+  }
+
+  @Put('/:id/avatar')
+  async updateGroupAvatar(
+    @Param('id', ParseIntPipe) id: number,
+    @Body() request: UpdateGroupAvatarDto,
+    @Headers('Authorization') auth: string | undefined,
+  ): Promise<UpdateGroupRespondDto> {
+    const userId = this.authService.verify(auth).userId;
+    await this.groupsService.updateGroupAvatar(userId, id, request.avatar);
+    return {
+      code: 200,
+      message: 'Group avatar updated successfully.',
     };
   }
 
